<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ProfileActivity">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/profilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_account_circle_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/firstNameTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/firstNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePicture">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/firstNameTextEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"
            android:inputType="textCapWords|textPersonName"
            android:maxLength="25" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lastNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/lastNameTextEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"
            android:inputType="textCapWords|textPersonName"
            android:maxLength="25" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/userTypeRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTextInputLayout">

        <RadioButton
            android:id="@+id/producerRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/producer" />

        <RadioButton
            android:id="@+id/consumerRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/consumer" />

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/companyNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTypeRadioGroup">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/companyNameTextEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name"
            android:inputType="textCapWords|textPersonName"
            android:maxLength="25" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/agreeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyNameTextInputLayout">

        <CheckBox
            android:id="@+id/agreeToTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_with_terms_conditions" />
    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/purplebasic"
        android:text="@string/create_your_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agreeLayout" />

</android.support.constraint.ConstraintLayout>